Add create and edit Pin form

--- a/templates/pins/details.html.twig
+++ b/templates/pins/details.html.twig
@@ -10,6 +10,10 @@
         <p>
            {{ pin.description }}
         </p>
+        <a href="{{ path('app_pins_edit', {'id': pin.id}) }}">
+            Edit pin
+        </a>
+        |
         <a href="{{ path('app_home') }}">
             Go back
         </a>
