--- a/templates/pins/create.html.twig
+++ b/templates/pins/create.html.twig
@@ -12,9 +12,6 @@
             Go back
         </a>
 
-        {{ form_start(form) }}
-            {{ form_widget(form) }}
-            <input type="submit" value="Create a pin" formnovalidate/>
-        {{ form_end(form) }}
+        {{ include('pins/_form.html.twig') }}
     </article>
 {% endblock %}
