--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -19,8 +19,8 @@
                     </a>
                 </h2>
                 <p>
-                   {{ pin.description }}<br/>
-                   {{ pin.createdAt|date('d-m-Y H:i:s') }}
+                   {{ pin.description | u.truncate(10, '...', false) }}<br/>
+                   Submitted {{ pin.createdAt|ago }}
                 </p>
             </article>
         {% endfor %}
