Add flash messages and move base layout to layouts folder

--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -16,6 +16,7 @@
         {% endblock %}
     </head>
     <body>
+        {{ include('layouts/partials/_flash_messages.html.twig') }}
         {% block body %}{% endblock %}
     </body>
 </html>
