--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'layouts/base.html.twig' %}
 
 {% block title %}
     PANTEREST - Find all the best pins on earth !
