--- a/templates/pins/edit.html.twig
+++ b/templates/pins/edit.html.twig
@@ -12,6 +12,6 @@
             Go back
         </a>
 
-        {{ include('pins/_form.html.twig', {'sumitButtontext': 'Update pin #' ~ pin.id}) }}
+        {{ include('pins/partials/_form.html.twig', {'sumitButtontext': 'Update pin #' ~ pin.id}) }}
     </article>
 {% endblock %}
