Use boostrap symfony form theme

--- a/templates/pins/partials/_form.html.twig
+++ b/templates/pins/partials/_form.html.twig
@@ -1,4 +1,6 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <input type="submit" value="{{ sumitButtontext | default('Create pin') }}" formnovalidate/>
+    <div class="d-grid">
+        <input class="btn btn-primary" type="submit" value="{{ sumitButtontext | default('Create pin') }}" formnovalidate/>
+    </div>
 {{ form_end(form) }}
