Prettifiation of application

--- a/templates/pins/create.html.twig
+++ b/templates/pins/create.html.twig
@@ -5,13 +5,13 @@
 {% endblock %}
 
 {% block body %}
-    <article>
-        <h1>Create a Pin</h1>
+    <div class="row">
+        <div class="col-md-6 mx-auto">
+            <article>
+                <h1>Create a Pin</h1>
 
-        <a href="{{ path('app_home') }}">
-            Go back
-        </a>
-
-        {{ include('pins/partials/_form.html.twig') }}
-    </article>
+                {{ include('pins/partials/_form.html.twig') }}
+            </article>
+        </div>
+    </div>
 {% endblock %}
