--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html class="h-100">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         {% endblock %}
+    </head>
+    <body class="d-flex flex-column h-100">
+        {{ include('layouts/partials/_nav.html.twig') }}
+
+        <main class="flex-shrink-0">
+          <div class="container" style="padding-top: 8rem;">
+            {% block body %}{% endblock %}
+          </div>
+        </main>
+
+        {{ include('layouts/partials/_footer.html.twig') }}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         {% endblock %}
-    </head>
-    <body>
-        {{ include('layouts/partials/_flash_messages.html.twig') }}
-        {% block body %}{% endblock %}
     </body>
 </html>
