--- a/templates/layouts/partials/_flash_messages.html.twig
+++ b/templates/layouts/partials/_flash_messages.html.twig
@@ -1,7 +1,8 @@
 {% for type, messages in app.flashes %}
     {% for message in messages %}
-        <div class="alert alert-{{ type }} rounded-0" role="alert">
+        <div class="alert alert-{{ type }} alert-dismissible fade show  rounded-0 mb-0" role="alert">
             {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     {% endfor %}
 {% endfor %}
