--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,1 +1,13 @@
 @import "~bootstrap";
+
+.vich-image{
+  .form-check {
+    @extend .mt-3;
+  }
+  img {
+    @extend .mb-2;
+    @extend .rounded;
+    @extend .shadow;
+    @extend .img-thumbnail;
+  }
+}
