--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -16,7 +16,7 @@
         {{ include('layouts/partials/_nav.html.twig') }}
 
         <main class="flex-shrink-0">
-          <div class="container" style="padding-top: 8rem;">
+          <div id="main-container">
             {% block body %}{% endblock %}
           </div>
         </main>
