Improved base layout for flash messages

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,8 +1,14 @@
 @import "~bootstrap";
 
+html,
+body{
+    @extend .h-100;
+}
+
 #main-container{
     @extend .container;
-    padding-top: 8rem;
+    @extend .flex-shrink-0;
+    padding-top: 4rem;
     padding-bottom: 4rem;
 }
 
