--- a/templates/layouts/partials/_flash_messages.html.twig
+++ b/templates/layouts/partials/_flash_messages.html.twig
@@ -1,6 +1,6 @@
 {% for type, messages in app.flashes %}
     {% for message in messages %}
-        <div class="alert alert-{{ type }} alert-dismissible fade show  rounded-0 mb-0" role="alert">
+        <div class="alert alert-{{ type }} alert-dismissible fade show rounded-0 mb-0 text-center" role="alert">
             {{ message }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
