--- a/templates/layouts/partials/_nav.html.twig
+++ b/templates/layouts/partials/_nav.html.twig
@@ -1,4 +1,4 @@
-<header class="fixed-top">
+<header class="sticky-top">
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="{{ path('app_home') }}">
@@ -23,5 +23,4 @@
       </div>
     </div>
   </nav>
-  {{ include('layouts/partials/_flash_messages.html.twig') }}
 </header>
