Display pin owner and add fullName method to display full name user

--- a/templates/pins/details.html.twig
+++ b/templates/pins/details.html.twig
@@ -15,7 +15,7 @@
                 <div class="p-4">
                     <div class="mb-3">
                         <h1 class="mb-0">{{pin.title}}</h1>
-                        <small class="text-muted">Submitted <time datetime="{{ pin.createdAt|date('Y-m-d H:i:s') }}">{{ pin.createdAt|ago }}</time></small>
+                        <small class="text-muted">Submitted <time datetime="{{ pin.createdAt|date('Y-m-d H:i:s') }}">{{ pin.createdAt|ago }}</time> by {{ pin.user.fullName }}</small>
                     </div>
                     <p>
                        {{ pin.description }}<br/>
