--- a/templates/layouts/partials/_nav.html.twig
+++ b/templates/layouts/partials/_nav.html.twig
@@ -10,15 +10,21 @@
 
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav ms-auto mb-2 mb-sm-0">
-          <li class="nav-item">
-            <a class="nav-link" href="{{ path('app_pins_create') }}">New pin</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Account</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Logout</a>
-          </li>
+          {% if app.user %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ path('app_pins_create') }}">New pin</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Account</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ path('app_login') }}">Login</a>
+            </li>
+          {% endif %}
         </ul>
       </div>
     </div>
