--- a/templates/layouts/partials/_nav.html.twig
+++ b/templates/layouts/partials/_nav.html.twig
@@ -15,12 +15,12 @@
               <a class="nav-link" href="{{ path('app_pins_create') }}">New pin</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Account</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
             </li>
           {% else %}
+              <li class="nav-item">
+              <a class="nav-link" href="{{ path('app_register') }}">Account</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ path('app_login') }}">Login</a>
             </li>
