--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -71,7 +71,7 @@
                     </div>
 
                     <p class="mt-5 mb-3 text-center text-muted">
-                        Not registered yet? <a href="#">Create an account</a>
+                        Not registered yet? <a href="{{ path('app_register') }}">Create an account</a>
                     </p>
                 </form>
 
