Refactor alert danger to alert error

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -5,6 +5,13 @@ body{
     @extend .h-100;
 }
 
+.alert-error {
+    --bs-alert-color: var(--bs-danger-text-emphasis);
+    --bs-alert-bg: var(--bs-danger-bg-subtle);
+    --bs-alert-border-color: var(--bs-danger-border-subtle);
+    --bs-alert-link-color: var(--bs-danger-text-emphasis);
+}
+
 #main-container{
     @extend .container;
     @extend .flex-shrink-0;
