--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -20,7 +20,7 @@
                 </div>
 
                 {% for flash_error in app.flashes('verify_email_error') %}
-                    <div class="alert alert-danger" role="alert">
+                    <div class="alert alert-error" role="alert">
                         {{ flash_error }}
                     </div>
                 {% endfor %}
