--- a/templates/layouts/partials/_flash_messages.html.twig
+++ b/templates/layouts/partials/_flash_messages.html.twig
@@ -1,4 +1,4 @@
-{% for type, messages in app.flashes %}
+{% for type, messages in app.flashes(['success', 'error', 'info']) %}
     {% for message in messages %}
         <div class="alert alert-{{ type }} alert-dismissible fade show rounded-0 mb-0 text-center" role="alert">
             {{ message }}
