--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,7 +20,7 @@
                 </div>
 
                 {% if error %}
-                    <div class="alert alert-danger" role="alert">
+                    <div class="alert alert-error" role="alert">
                         {{ error.messageKey|trans(error.messageData, 'security') }}
                     </div>
                 {% endif %}
