Style login and registration form

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -26,18 +26,29 @@
                 {% endfor %}
 
                 {{ form_start(registrationForm) }}
-                    {{ form_row(registrationForm.firstName) }}
-                    {{ form_row(registrationForm.lastName) }}
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            {{ form_row(registrationForm.firstName) }}
+                        </div>
+                        <div class="col-md-6">
+                            {{ form_row(registrationForm.lastName) }}
+                        </div>
+                    </div>
                     {{ form_row(registrationForm.email) }}
                     {{ form_row(registrationForm.plainPassword) }}
 
                     {{ form_row(registrationForm.agreeTerms) }}
 
                     <div class="d-grid mt-3">
-                        <button class="btn btn-primary" type="submit">
+                        <button class="btn btn-lg btn-primary" type="submit" formnovalidate>
                             Register
                         </button>
                     </div>
+
+                    <p class="mt-5 mb-3 text-center text-muted">
+                        Already have an account ? <a href="{{ path('app_login') }}">Log in</a>
+                    </p>
                 {{ form_end(registrationForm) }}
 
             </article>
