--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <div class="d-grid mt-3">
-                        <button class="btn btn-primary" type="submit">
+                        <button class="btn btn-lg btn-primary" type="submit" formnovalidate>
                             Sign in
                         </button>
                     </div>
