Add reset password feature

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         <div>
-                            <a href="#" title="Forgot password ?">
+                            <a href="{{ path('app_forgot_password_request') }}" title="Forgot password ?">
                                 Forgot password ?
                             </a>
                         </div>
