--- a/templates/layouts/partials/_nav.html.twig
+++ b/templates/layouts/partials/_nav.html.twig
@@ -27,7 +27,7 @@
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_register') }}">
-                                Account
+                                Register
                             </a>
                         </li>
                         <li class="nav-item">
