--- a/templates/layouts/partials/_nav.html.twig
+++ b/templates/layouts/partials/_nav.html.twig
@@ -29,6 +29,13 @@
                                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('logout')}}" />
                             </form>
                         </li>
+                        {% if is_granted('IS_IMPERSONATOR') %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ impersonation_exit_url(path('app_home')) }}">
+                                    Exit impersonation
+                                </a>
+                            </li>
+                        {% endif %}
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_register') }}">
