--- a/templates/layouts/partials/_nav.html.twig
+++ b/templates/layouts/partials/_nav.html.twig
@@ -52,12 +52,12 @@
             </div>
             {% if app.user %}
                 <div class="d-none d-md-flex">
-                    <div class="vr text-white mx-md-2"></div>
+                    <div class="vr text-white ms-md-2 me-md-3"></div>
                     <div class="badge rounded-pill text-bg-primary m-0 p-0">
-                        <a href="#" class="ps-2 pe-3">
+                        <div class="ps-2 pe-3">
                             <img class="img-profile rounded-circle" style="width: 20px; height: 20px;" src="{{ app.user.gravatarUrl }}" alt="{{ app.user.fullName }}'s Avatar">
                             <span class="py-2 d-inline-flex text-white text-gray-600">{{ app.user.fullName }}</span>
-                        </a>
+                        </div>
                     </div>
                 </div>
             {% endif %}
